tests/snapshots/examples_fixtures/type_system__failing__10_adt_non_exhaustive.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/10_adt_non_exhaustive.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E083]: NON-EXHAUSTIVE ADT MATCH

Match on `Color` is missing constructors: Blue.

  --> examples/type_system/failing/10_adt_non_exhaustive.flx:13:5
   |
13 |     match c {
   |     ^^^^^^^^^
14 |         Red -> "red",
   | ^^^^^^^^^^^^^^^^^^^^^
15 |         Green -> "green",
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
16 |         // Missing: Blue
   | ^^^^^^^^^^^^^^^^^^^^^^^^
17 |     }
   | ^^^^^

Hint:
  Add arms for Blue or add a `_ -> ...` catch-all.
== stdout ==
<not executed>
